cmake_minimum_required(VERSION 3.26)
project(BasicSyntax_and_ControlStructs)

set(CMAKE_CXX_STANDARD 17)

add_executable(BasicSyntax_and_ControlStructs main.cpp
        calculator_functions.h
        guess_the_number.h
        tic_tac_toe_game.h
        dice_rolling_simulator.h
        dice_rolling_simulator.h
        dice_rolling_simulator.h
        dice_rolling_simulator.h
)
